# xchat

./: .gitignore  LICENSE  README.md
backend/: .env.template  Makefile  fly.toml  html_parser.py  ingest.py  main.py  pyproject.toml
frontend/: .env.template  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/chat/: auto-resize-textarea.tsx  chat-message-bubble.tsx  chat-window.tsx  empty-state.tsx  inline-citation.tsx  source-bubble.tsx
frontend/app/components/ui/: authenticated.tsx  button.tsx  custom-header.tsx  dialog.tsx  dropdown-menu.tsx  elven-init.tsx  footer.tsx  login-component.tsx  login-modal-button.tsx  logo.tsx  spinner.tsx  walletconnect-pairings.tsx  walletconnect-qr-code.tsx  welcome.tsx
frontend/app/utils/: constants.ts  getSigningDeviceName.ts
